--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ notebooks/elm/.ipynb_checkpoints
 notebooks/elm/__pycache__
 notebooks/ipywidgets/.ipynb_checkpoints
 .env
+notebooks/elm-mutable/.ipynb_checkpoints
+notebooks/elm-mutable/__pycache__
